tests/invalid/semantic_if_condition_error.c
int count = 3;

if (count) {
    int inner = 1;
}
